Don't mount volume if using all node_modules installed in containers instead of from local machine.

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -7,4 +7,6 @@ COPY . .
 
 EXPOSE 3001
 
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "start"]
+# Use the below command instead for development with nodemon
+# CMD ["npm", "run", "dev"]
