--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,9 @@ services:
     build: ./backend
     ports:
       - "3001:3001"
-    volumes:
-      - ./backend:/app
+    # Uncomment the volumes for live reload for dev
+    # volumes:
+    #   - ./backend:/app
     env_file:
       - ./backend/.env
 
@@ -14,8 +15,9 @@ services:
     build: ./frontend
     ports:
       - "3005:3005"
-    volumes:
-      - ./frontend:/app
+    # Uncomment the volumes for live reload for dev
+    # volumes:
+    #   - ./frontend:/app
     env_file:
       - ./frontend/.env
     depends_on:
